# rust-parallel

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml  release.yml
scripts/: benchmark.sh  generate_demos.sh  generate_manual.sh
src/: command.rs  command_line_args.rs  commands.rs  common.rs  input.rs  main.rs  output.rs  parser.rs  process.rs  progress.rs  regex.rs  types.rs
src/command/: metrics.rs  path_cache.rs
src/input/: buffered_reader.rs  task.rs
src/output/: task.rs
src/parser/: buffered.rs  command_line.rs  pipe.rs  regex.rs
src/progress/: style.rs
tests/: csv_file.txt  csv_file_badline.txt  dummy_shell.sh  file.txt  integration_tests.rs  shell_input.txt
