[package]
name = "rust-parallel"
version = "1.13.1"
authors = ["Aaron Riekenberg <aaron.riekenberg@gmail.com>"]
edition = "2021"
categories = ["asynchronous", "command-line-interface", "concurrency"]
description = "Fast command line app in rust/tokio to run commands in parallel. Similar interface to GNU parallel or xargs."
keywords = ["cli", "parallel", "tokio"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aaronriekenberg/rust-parallel"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
itertools = "0.12"
num_cpus = "1"
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"
