[package]
name = "rust-parallel"
version = "1.20.0"
authors = ["Aaron Riekenberg <aaron.riekenberg@gmail.com>"]
edition = "2024"
categories = ["asynchronous", "command-line-interface", "concurrency"]
description = "Fast command line app in rust/tokio to run commands in parallel. Similar interface to GNU parallel or xargs."
keywords = ["cli", "parallel", "tokio"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aaronriekenberg/rust-parallel"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = "2"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
itertools = "0.14"
num_cpus = "1"
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"
